--- a/JS Assignment/index.html
+++ b/JS Assignment/index.html
@@ -87,7 +87,18 @@
                     <h3>[6] Write the code for adding new elements dynamically?</h3>
                     <p>
                     <pre>
-                    &diams;     
+                    &diams;     <textarea name="" id="" cols="100" rows="20">
+                        <html> 
+<head> 
+<title>t1</title> 
+<script type="text/javascript"> 
+    function addNode () { var newP = document. createElement("p"); 
+    var textNode = document.createTextNode(" This is a new text node"); 
+    newP.appendChild(textNode); document.getElementById("firstP").appendChild(newP); } 
+</script> </head> 
+<body> <p id="firstP">firstP<p> </body> 
+</html>
+                    </textarea> 
                 </pre>
                     </p>
                     <hr>
